fixed overlapping styles

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,6 +31,7 @@ h1 {
   color: var(--primary-color);
   margin-top: 20px;
   font-weight: bold;
+  color: #B8860B;
 }
 
 p {
